<resources>
    <string name="app_name">"Bits "</string>
    <string name="action_settings">Settings</string>

    <!--Strings related to user history page -->
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="edit">Edit</string>
    <string name="donation_history">Donation History</string>
    <string name="request_history">Request History</string>
    <string name="title_activity_login">Sign in</string>


    <string name="request_tab">Create Request</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_history_page__">HistoryPage_Activity_</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="textview">TextView</string>
    <string name="title_activity_main2">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="request_1">Request #1</string>
    <string name="request_2">Request #2</string>
    <string name="request_feed">REQUEST FEED</string>
    <string name="request_5">Request #5</string>
    <string name="request_4">Request #4</string>
    <string name="request_3">Request #3</string>
    <string name="request_option">Create Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Strings related to create profile -->
    <string name="create_profile">Create Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_age">Age</string>
    <string name="profile_location">Location</string>
    <string name="profile_bio">Bio</string>
    <string name="profile_setbank">Set Up Banking Info</string>

</resources>
